# nlp-deployment

./: README.md  load.js  push.sh  pyproject.toml
.github/workflows/: main.yml  test.yml  tests.yml
.k8s/bases/: deployment-project.yaml  deployment-redis.yaml  kustomization.yaml  namespace.yaml  persistent-volume.yaml  service-project.yaml  service-redis.yaml
.k8s/overlays/dev/: kustomization.yaml  patch-project.yaml
.k8s/overlays/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
mlapi/: Dockerfile  pyproject.toml
mlapi/distilbert-base-uncased-finetuned-sst2/: README.md  config.json
mlapi/mlapi/: example.py  main.py
mlapi/tests/: test_mlapi.py
trainer/: train.py
